--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.8.1
 backports.zoneinfo==0.2.1
 Django==4.2.11
+django-filter==23.4
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 psycopg2-binary==2.9.6
 sqlparse==0.4.4
 typing-extensions==4.11.0
